feat(ui): enhance null safety by adding nullable annotations and adjusting component initializations